--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -24,6 +24,14 @@
                     <i class="icon ion-settings"></i>
                     Settings
                 </a>
+            <!--    <a menu-close class="item item-icon-left" ui-sref-active="active" ui-sref="app.login">
+                    <i class="icon ion-android-person"></i>
+                    Sign-in
+                </a>-->
+                <a menu-close class="item item-icon-left" ui-sref-active="active" ui-sref="app.signup">
+                    <i class="icon ion-android-person"></i>
+                    Sign-up
+                </a>
             </div>
         </ion-content>
     </ion-side-menu>
