--- a/app/templates/views/home.html
+++ b/app/templates/views/home.html
@@ -27,7 +27,7 @@
             <label class="item item-input" >
                 <textarea placeholder="Text" ng-model="form.text"></textarea>
             </label>
-            <button class="button button-positive" ng-click="printMe()">
+            <button class="button button-positive" ng-click="sendMessage()">
                 Send
             </button>
             </form>
