--- a/app/templates/views/login.html
+++ b/app/templates/views/login.html
@@ -10,7 +10,7 @@
         <div class="list">
             <label class="item item-input">
                 <span class="input-label">Username</span>
-                <input type="text" ng-model="user.username">
+                <input type="text" ng-model="user.email">
             </label>
             <label class="item item-input">
                 <span class="input-label">Password</span>
@@ -18,12 +18,13 @@
             </label>
         </div>
         <div class="padding">
-            <button class="button button-block button-positive" ng-click="signIn(user)">
+            <button class="button button-block button-positive" ng-click="signIn()">
                 Sign-In
             </button>
-            <p class="text-center">
+            <!--<p class="text-center">
                 <a href="#/forgot-password">Forgot password</a>
-            </p>
+            </p>-->
         </div>
+
     </ion-content>
 </ion-view>
